--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,11 @@
 
 # Icon must end with two \r
 Icon
-
+local-cdn
 
 # Thumbnails
 ._*
-.venv/
+.venv
 
 # Files that might appear on external disk
 .Spotlight-V100
